--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,7 @@ Flask==1.1.1
 base64
 re
 uuid
-
-import re
-from PIL import Image
-from io import BytesIO
-import numpy as np
-import cv2
+PIL
+io
+numpy
+mediapipe
