--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==1.1.1
-Pillow
-scikit-image
+Flask==2.2.2
+Pillow==9.4.0
+scikit-image==0.20.0
 numpy
-mediapipe
+opencv-python==4.7.0.72
+uuid
